--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <nav class = 'main-nav'>
     <ul class = 'nav-list'>
-        <li><a href ="#">Home</a></li>
-        <li><a href ="#">Projects</a></li>
+        <li><a href ="index.html">Home</a></li>
+        <li><a href ="projects.html">Projects</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
     </nav>
