--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </header>
     </div>
 
+    <div class = 'container'>
     <section class = 'introduction-class'>
         <h2>About Me</h2>
         <article class = 'introduction-article'>
@@ -36,6 +37,7 @@
                 <p>I am a front-end web developer from the Philippines. I build websites using HTML, CSS and Javascript. It is my passion to write websites and apps in different languages and I also aim to extend my reach to the different languages to be able to provide more solution and to help people for their needs. Feel free to browse through my previous project.</p>
         </article>
     </section>
+</div>
 
 
     <div class = 'container'>
