added styling to showcase

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     </header>
 
     <section class = 'main-showcase'>
+        <div class = 'showcase-container'>
         <h1>HI! I'M VINCE MANGAHIS</h1>
         <h4>FULL-STACK DEVELOPER FROM THE PHILIPPINES</h4>
         <button>CONTACT ME <i class="fa fa-phone"></i></button>
+        </div>
+
     </section>
 
     <section class = 'about-section'>
