added styling to about section

--- a/index.html
+++ b/index.html
@@ -24,34 +24,39 @@
     <section class = 'main-showcase'>
         <div class = 'showcase-container'>
         <h1>HI! I'M VINCE MANGAHIS</h1>
-        <h4>FULL-STACK DEVELOPER FROM THE PHILIPPINES</h4>
+        <h4>A FULL-STACK DEVELOPER FROM THE PHILIPPINES</h4>
         <button>CONTACT ME <i class="fa fa-phone"></i></button>
         </div>
 
     </section>
 
     <section class = 'about-section'>
+        <h1 style = 'text-align: center'>ABOUT ME</h1>
+        <div class="about-section-container">
         <img src="./images/about-me.jpg" alt="">
+
+        <aside class = 'basic-info'>
         <h1>I'M <span class = 'name-about'>VINCE MANGAHIS</span></h1>
         <h3 class = 'about-title'>Software & Web Developer</h3>
-        <h3 class = 'about-info'>Age</h3>
-        <span class = 'about-details'>21</span>
-        <h3 class = 'about-info'>Address</h3>
-        <span class = 'about-details'>404 Street, South Driveway</span>
-        <h3 class = 'about-info'>Email</h3>
-        <span class = 'about-details'>abc@example.com</span>
-        <h3 class = 'about-info'>Phone</h3>
-        <span class = 'about-details'>+04353125543</span>
+        <h3 class = 'about-info'>Age <span class = 'about-details'>21</span></h3>
+        <h3 class = 'about-info'>Address <span class = 'about-details'>404 Street, South Driveway</span></h3>
+        <h3 class = 'about-info'>Email <span class = 'about-details'>abc@example.com</span></h3>
+        <h3 class = 'about-info'>Phone<span class = 'about-details'>+04353125543</span></h3>
+        
 
-        <aside class ='social-media-links'>
-            <a href = "#"><i class="fab fa-facebook"></i></a>
-            <a href = "#"><i class="fab fa-twitter"></i></a>
-            <a href = "#"><i class="fab fa-github"></i></a>
+            <div class="social-media-link">
+            <a href = "#"><i class="fab fa-facebook" style ='font-size: 2em;'></i></a>
+            <a href = "#"><i class="fab fa-twitter" style ='font-size: 2em;'></i></a>
+            <a href = "#"><i class="fab fa-github" style ='font-size: 2em;'></i></a>
+            </div>
         </aside>
+
+        </div>
     </section>
 
     <section class = 'skill-section'>
         <h1>SKILLS</h1>
+        <div class="skill-main-container">
         <div class = 'skill-container'>
             <img src="./images/frontend-icon.jpg" alt="">
             <h3 class = 'skill-title'>FRONT-END TECHOLOGIES</h3>
@@ -86,6 +91,8 @@
                 <li>C#/WPF/.NET CORE</li>
             </ul>
         </div>
+        </div>
+
     </section>
 
 
