--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
     </section>
 
     <section class = 'skill-section'>
-        <h1>SKILLS</h1>
+        <h1 style = 'text-align: center'>SKILLS</h1>
         <div class="skill-main-container">
         <div class = 'skill-container'>
             <img src="./images/frontend-icon.jpg" alt="">
             <h3 class = 'skill-title'>FRONT-END TECHOLOGIES</h3>
             <ul>
-                <li>HTML5, CSS3 & JAVASCRIPT</li>
-                <li>BOOTSTRAP</li>
-                <li>REACTJS/REDUX</li>
-                <li>ANGULAR</li>
-                <li>VUE.JS</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>HTML5, CSS3 & JAVASCRIPT</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>BOOTSTRAP</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>REACTJS/REDUX</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>ANGULAR</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>VUE.JS</li>
             </ul>
         </div>
 
@@ -73,11 +73,11 @@
             <img src="./images/backend-icon.png" alt="">
             <h3 class = 'skill-title'>BACK-END TECHOLOGIES</h3>
             <ul>
-                <li>SQL</li>
-                <li>MONGODB</li>
-                <li>PHP/LARAVEL</li>
-                <li>NODEJS/EXPRESS</li>
-                <li>PYTHON/DJANGO/FLASK</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>SQL</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>MONGODB</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>PHP/LARAVEL</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>NODEJS/EXPRESS</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>PYTHON/DJANGO/FLASK</li>
             </ul>
         </div>
 
@@ -85,10 +85,10 @@
             <img src="./images/desktop-icon.png" alt="">
             <h3 class = 'skill-title'>DESKTOP APPLICATION DEVELOPMENT</h3>
             <ul>
-                <li>C++/MFC/WIN32</li>
-                <li>JAVA/JAVA SWING</li>
-                <li>PYTHON/TKINTER</li>
-                <li>C#/WPF/.NET CORE</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>C++/MFC/WIN32</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>JAVA/JAVA SWING</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>PYTHON/TKINTER</li>
+                <li><i class="fas fa-check" style = 'margin-right: 10px'></i>C#/WPF/.NET CORE</li>
             </ul>
         </div>
         </div>
@@ -139,7 +139,7 @@
             <label for="">Inquiry</label>
             <textarea name="" id="" cols="30" rows="10" style ="resize:none" placeholder="Your inquiry.."></textarea>
             
-            <input type="submit" value="">
+            <input type="submit" value="Submit">
         </form>
     </section>
 
