added styling to footer

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1><a href ="#">VMangahis </a></h1>
         <nav class = 'main-nav'>
             <ul>
-                <li><a href ="#">ABOUT</a></li>
-                <li><a href ="#">SKILLS</a></li>
-                <li><a href ="#">PORTFOLIO</a></li>
-                <li><a href ="#">CONTACT</a></li>
+                <li><a href ="#about-section">ABOUT</a></li>
+                <li><a href ="#skill-section">SKILLS</a></li>
+                <li><a href ="#portfolio-section">PORTFOLIO</a></li>
+                <li><a href ="#contact-section">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
 
     </section>
 
-    <section class = 'about-section'>
+    <section class = 'about-section' id='about-section'>
         <h1 style = 'text-align: center'>ABOUT ME</h1>
         <div class="about-section-container">
         <img src="./images/about-me.jpg" alt="">
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <section class = 'skill-section'>
+    <section class = 'skill-section' id = 'skill-section'>
         <h1 style = 'text-align: center'>SKILLS</h1>
         <div class="skill-main-container">
         <div class = 'skill-container'>
@@ -96,7 +96,7 @@
     </section>
 
 
-    <section class = 'portfolio-section'>
+    <section class = 'portfolio-section' id = 'portfolio-section'>
         <h1 style = 'text-align:center'>PORTFOLIO</h1>
 
     <div class="content-main-container">
@@ -134,7 +134,7 @@
 
     </section>
 
-    <section>
+    <section id = 'contact-section'>
         <h1 style = 'text-align: center'>CONTACT ME</h1>
         <form action="" class = 'contact-form'>
             
@@ -152,9 +152,9 @@
 
     <footer class = 'main-footer'>
             <div class = 'social-media-footer'>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-github"></i>
+               <a href="#"> <i class="fab fa-facebook" style='font-size: 1.9em'></i></a>
+               <a href="#"> <i class="fab fa-twitter" style='font-size: 1.9em'></i></a>
+               <a href="#">  <i class="fab fa-github"style='font-size: 1.9em'></i></a>
             </div>
 
             <nav class = 'nav-footer'>
@@ -171,6 +171,6 @@
     </footer>
 
 
-    
+    <script src="./index.js"></script>
 </body>
 </html>
