--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class = 'skill-section' id = 'skill-section'>
         <h1 style = 'text-align: center'>SKILLS</h1>
         <div class="skill-main-container">
-        <div class = 'skill-container'>
+        <div class = 'skill-container' data-aos='fade-up' data-aos-duration = '500'>
             <img src="./images/frontend-icon.jpg" alt="">
             <h3 class = 'skill-title'>FRONT-END TECHOLOGIES</h3>
             <ul>
@@ -79,7 +79,7 @@
             </ul>
         </div>
 
-        <div class = 'skill-container'>
+        <div class = 'skill-container' data-aos='fade-up' data-aos-duration = '500'>
             <img src="./images/backend-icon.png" alt="">
             <h3 class = 'skill-title'>BACK-END TECHOLOGIES</h3>
             <ul>
@@ -91,7 +91,7 @@
             </ul>
         </div>
 
-        <div class = 'skill-container'>
+        <div class = 'skill-container' data-aos='fade-up' data-aos-duration = '500'>
             <img src="./images/desktop-icon.png" alt="">
             <h3 class = 'skill-title'>DESKTOP APPLICATION DEVELOPMENT</h3>
             <ul>
@@ -115,28 +115,28 @@
     <div class="content-main-container">
 
 
-        <a href= "#" class = 'static-site-projects'>  
+        <a href= "#" class = 'static-site-projects' data-aos='zoom-in' data-aos-duration="800">  
         <div class = 'content-container' >   
         <p class = 'placeholder-text'>STATIC SITE PROJECTS</p>
         </div>
         </a>
 
 
-        <a href= "#" class = 'backend-only-projects'>
+        <a href= "#" class = 'backend-only-projects' data-aos='zoom-in' data-aos-duration="800">
         <div class = 'content-container '>
             <p class = 'placeholder-text'>BACK-END FOCUSED PROJECTS</p>
         </div>
         </a>
 
 
-        <a href= "#" class = 'full-stack-projects'>
+        <a href= "#" class = 'full-stack-projects' data-aos='zoom-in' data-aos-duration="800">
         <div class = 'content-container'>
         
             <p class = 'placeholder-text'>FULL-STACK PROJECTS</p>
         </div>
         </a>
 
-        <a href= "#" class = 'desktop-app-projects'>
+        <a href= "#" class = 'desktop-app-projects' data-aos='zoom-in' data-aos-duration="800">
         <div class = 'content-container'>
             <p class = 'placeholder-text'>DESKTOP APP PROJECTS</p>        
         </div>
@@ -190,6 +190,6 @@
     
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js">
     </script>
-    <script src="./index.js"></script>
+    <script>AOS.init();</script>
 </body>
 </html>
