--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class = 'main-showcase'>
         <div class = 'showcase-container'>
         <h1>HI! I'M VINCE MANGAHIS</h1>
-        <h4>A FULL-STACK DEVELOPER FROM THE PHILIPPINES</h4>
+        <h4>FULL-STACK DEVELOPER FROM THE PHILIPPINES</h4>
         <button>CONTACT ME <i class="fa fa-phone"></i></button>
         </div>
 
@@ -41,7 +41,7 @@
     <section class = 'about-section' id='about-section'>
         <h1 style = 'text-align: center'>ABOUT ME</h1>
         <div class="about-section-container">
-        <img src="./images/about-me.jpg" alt="">
+        <img src="./images/photo.jpg" alt="">
 
         <aside class = 'basic-info'>
         <h1>I'M <span class = 'name-about'>VINCE MANGAHIS</span></h1>
