--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>  
 
 
-    <div class="general-container">
+    <div class="general-container showcase">
     <section class = 'main-showcase'>
         <div class = 'showcase-container'>
         <h1>HI! I'M VINCE MANGAHIS</h1>
@@ -93,7 +93,7 @@
 
         <div class = 'skill-container' data-aos='fade-up' data-aos-duration = '500'>
             <img src="./images/desktop-icon.png" alt="">
-            <h3 class = 'skill-title'>DESKTOP APPLICATION DEVELOPMENT</h3>
+            <h3 class = 'skill-title'>DESKTOP APPLICATION </h3>
             <ul>
                 <li><i class="fas fa-check" style = 'margin-right: 10px'></i>C++/MFC/WIN32</li>
                 <li><i class="fas fa-check" style = 'margin-right: 10px'></i>JAVA/JAVA SWING</li>
